# anthropic-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  TODOs.todo  __init__.py  agent_test.ipynb  anthropic_test.ipynb  current_xml_schema.md  json_stream.json  main.py  new_streaming_paradigm.md  pyproject.toml  test.ipynb
.claude/: settings.local.json
.cursor/commands/: create_agent.md  create_agent_tool.md  create_frontend_agent_tool.md  fix_with_test.md  refactor_agnostic.md
.cursor/rules/: system.mdc
agent_base/: __init__.py  framework_design.md
agent_base/abort_steer/: __init__.py  base.py  registry.py
agent_base/agent_base_design_diary/: async-communication.html  core-domain-model.html  file-coordination.html  index.html  media-backend.html  planned-systems.html  providers.html  sandbox.html  storage.html  streaming.html  tool-system.html
agent_base/common_tools/: __init__.py  apply_patch.py  code_execution_tool.py  glob_file_search.py  grep_search.py  list_dir.py  plan_tools.py  read_file.py  sub_agent_tool.py  todo_tool.py
agent_base/compaction/: __init__.py  base.py  strategies.py
agent_base/core/: __init__.py  abort_types.py  agent_base.py  config.py  conversation_log.py  end_turn_hook.py  messages.py  provider.py  renderer.py  result.py  types.py
agent_base/developer-diaries/: abort-steer-diary.html  media-backend-diary.html  media-backend-part2.html  sandbox-diary.html  tool-result-architecture.html
agent_base/logging/: __init__.py  config.py  context.py  processors.py
agent_base/media_backend/: __init__.py  local.py  media_test.ipynb  media_types.py  s3.py  types.py
agent_base/memory/: __init__.py  (+2 more)
anthropic_agent/: __init__.py  agent-flow.md  logging.md  refactoring_fixes_plan.md
demos/fastapi_server/: README.md  agent.py  agent_api_test.ipynb  agent_router.py  db.py  main.py  pyproject.toml  sse_parsers.py  storage.py
examples/: __init__.py  basic_demo.py  query_ai641b_concentration.py
old_tests/: test_frontend_tools.py  test_media_backend_local.py  test_media_backend_sandbox_integration.py  test_sandbox_import_export.py  test_sandbox_local.py
tests/: integration_test_frontend_tools.py  test_frontend_tools.py  test_sandbox_import_export.py  test_sandbox_local.py
(+271 files in other folders)
